Fix UI ctc-beam-search dependency
The ctc-beam-search dependency is needed by UI-* projects during runtime.
Without it UI doesn't work and the following error is shown in browser's console:

Uncaught ReferenceError: ctcBeamSearch is not defined

* Import ctc-beam-search dependency as a git submoudle
* Update library and UI building instructions

--- a/ui-accent/package.json
+++ b/ui-accent/package.json
@@ -1,6 +1,6 @@
 {
   "name": "translator-ui",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -13,7 +13,7 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "ava": "^4.1.0",
-    "ctc-beam-search": "../../ctc-beam-search",
+    "ctc-beam-search": "../ctc-beam-search",
     "onnxruntime-web": "^1.9.0",
     "rollup": "^2.3.4",
     "rollup-plugin-copy": "^3.4.0",
